--- a/_gatsby/slices/_gatsby-scripts-1.html
+++ b/_gatsby/slices/_gatsby-scripts-1.html
@@ -2,6 +2,6 @@
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-10e634ee4a898c41df56.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-04892c26a62a39e4d6ca.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-649850027a69f0c9be13.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-7fd62bcaed9ec831ca57.js\"],\"component---src-pages-ontenet-tsx\":[\"/component---src-pages-ontenet-tsx-cfe36ae7fff2a6fd45fa.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="8633893eced321a3941d";</script><script src="/webpack-runtime-b013123f2fbd9fc1e844.js" async></script><script src="/framework-ed79839fc2f1a3819392.js" async></script><script src="/app-10e634ee4a898c41df56.js" async></script>
+        <script>window.___webpackCompilationHash="840e86cb47de7903d8ea";</script><script src="/webpack-runtime-fa5c730d9c9489a4ad86.js" async></script><script src="/framework-13ac51e64d1e21ef1f10.js" async></script><script src="/app-649850027a69f0c9be13.js" async></script>
